@@ -205,8 +205,9 @@ setMethod(
 #' @param existingColors how to make use of the exiting colors in the
 #'   \code{ClusterExperiment} object. 'ignore' will ignore them and assign new
 #'   colors. 'firstOnly' will use the existing colors of only the 1st
-#'   clustering, and then give new colors for the remaining (not implemented
-#'   yet). 'all' will use all of the existing colors.
+#'   clustering, and then align the remaining clusters and give new colors for the 
+#'   remaining only. 'all' will use 
+#'   all of the existing colors.
 #' @param resetNames logical. Whether to reset the names of the clusters in
 #'   \code{clusterLegend} to be the aligned integer-valued ids from
 #'   \code{plotClusters}.
@@ -220,7 +221,7 @@ setMethod(
 setMethod(
   f = "plotClusters",
   signature = signature(object = "ClusterExperiment",whichClusters="numeric"),
-  definition = function(object, whichClusters,existingColors=c("ignore","all"),
+  definition = function(object, whichClusters,existingColors=c("ignore","all","firstOnly"),
                         resetNames=FALSE,resetColors=FALSE,resetOrderSamples=FALSE,sampleData=NULL,clusterLabels=NULL,...)
   {
     existingColors<-match.arg(existingColors)
@@ -231,7 +232,7 @@ setMethod(
     if(useExisting){ #using existing colors in some way:
         args<-list(...)
         plotArg<-TRUE #the default
-        if("plot" %in% names(args) ){
+		if("plot" %in% names(args) ){
             whPlot<-which(names(args)=="plot")
             if(length(args)>length(whPlot)){
               plotArg<-args[[whPlot]]
@@ -241,20 +242,64 @@ setMethod(
               args<-NULL
             }
         }
+			
+		#if firstRow, add greys to the color palette for the first row so don't "use" up good colors on those
+		colPaletteArg<-massivePalette #the default
+        if("colPalette" %in% names(args) ){
+            whPlot<-which(names(args)=="colPalette")
+            if(length(args)>length(whPlot)){
+              colPaletteArg<-args[[whPlot]]
+              args<-args[-whPlot]
+            }
+            else{
+              args<-NULL
+            }
+        }
+		if(existingColors=="firstOnly"){
+	        nadd<-nrow(clusterLegend(object)[[whichClusters[[1]]]])
+			addgreys<-gray(seq(0.01,.99,length=nadd))
+			colPaletteArg<-c(addgreys,colPaletteArg)
+		}
+
+		#------------
         #align the samples, but don't plot them.
-        outval<-do.call(plotClusters,c(list(object=clusterMatrix(object)[,whichClusters,drop=FALSE],input="clusters",plot=FALSE,sampleData=sampleData),args))
-        #make new color matrix with existingColors
-        existingClusters<-clusterMatrix(object)[,whichClusters]
-        existingClusterColors<-clusterLegend(object)[whichClusters]
-        newColorMat<-do.call("cbind",lapply(1:ncol(existingClusters),function(ii){
-            colMat<-existingClusterColors[[ii]]
-            cl<-existingClusters[,ii]
-            m<-match(as.character(cl),colMat[,"clusterIds"])
-            colVect<-colMat[m,"color"]
-        }))
-        colnames(newColorMat)<-colnames(existingClusters)
-       #now plot them
-	    do.call(plotClusters,c(list(object=newColorMat[outval$orderSamples,], input="colors", plot=plotArg,clusterLabels=clusterLabels), args))
+		#------------
+        outval<-do.call(plotClusters, c(list(object=clusterMatrix(object)[,whichClusters,drop=FALSE], input="clusters", plot=FALSE, sampleData=sampleData,colPalette=colPaletteArg),args))
+		#------------
+        #make new color matrix with existing Colors
+		#------------
+        if(existingColors=="all"){
+	       newColorMat<-convertClusterLegend(object, whichClusters=whichClusters, output="matrixColors")
+		}
+		if(existingColors=="firstOnly"){
+			#pre-existing colors for first clustering
+			firstRow<-as.vector(convertClusterLegend(object, whichClusters=whichClusters[1], output="matrixColors"))
+			#current assignment of colors all clusters:
+			newColorMat<-outval$colors
+			
+			#integer values that match across the clusterings
+			#note could skip this matrix, but just in case the colors are not unique, this guarantees don't change all of them....
+			alignCl<-outval$alignedClusterIds[,1]
+			firstCl<-clusterMatrix(object)[,whichClusters[1]]
+			valsToChange<-unique(alignCl[firstCl>0]) #don't mess with assignment of -1/-2
+			#match them and make them the existing color
+			unusedColors<-colPaletteArg[!colPaletteArg %in% c(as.vector(newColorMat),firstRow)]
+			for(val in valsToChange){
+				wh<-which(alignCl==val)
+				newCol<-unique(firstRow[wh])
+				if(length(newCol)!=1) stop("internal coding error in existingColors='first'")
+				#alignedClusterIds aligns even if -1/-2)
+				if(any(newColorMat==newCol)){
+					newColorMat[newColorMat==newCol]<-unusedColors[1]
+					unusedColors<-tail(unusedColors,-1)
+				}
+				newColorMat[outval$alignedClusterIds==val & clusterMatrix(object)[,whichClusters]>0]<-newCol
+			}
+		}
+		#------------
+       	#now plot them
+		#------------
+		do.call(plotClusters,c(list(object=newColorMat[outval$orderSamples,], input="colors", plot=plotArg,clusterLabels=clusterLabels), args))
 
     }
     else{
@@ -265,7 +310,6 @@ setMethod(
     if(resetColors | resetNames){
       ## recall, everything from outval is in the order of whichClusters!
       ## also includes values from sampleData, which are always at the bottom, so don't affect anything.
-       # browser()
       oldClMat<-clusterMatrix(object)[,whichClusters]
         newClMat<-outval$alignedClusterIds
        #make both colors switch to aligned values (but keep name the same!)
@@ -334,10 +378,11 @@ setMethod(
 	  
   if(!is.null(orderSamples) && !all(orderSamples %in% 1:nrow(object))) stop("invalid values for orderSamples")
   index<-orderSamples #match to old arguments
-
   input<-match.arg(input)
 
+  #------------
   ###Add any additional sampleData to the bottom
+  #------------
 	if(!is.null(sampleData)){
 	  if(!is.matrix(sampleData) && !is.data.frame(sampleData)){
       if(length(sampleData)!=nrow(object)){
@@ -353,7 +398,11 @@ setMethod(
     clusters<-cbind(object,sampleData)
 	}
 	else clusters<-object
-    clNames<-clusterLabels
+    
+	#------------
+	# deal with given clusterLabels 
+    #------------
+	clNames<-clusterLabels
 	if(is.logical(clNames)){
 		if(!clNames) clNames<-rep("",ncol(clusters))
 		else clNames<-colnames(clusters)
@@ -373,7 +422,10 @@ setMethod(
     } 
 
 	dnames<-dimnames(clusters)
-	#arguments to be passed at various calls (these are ones that do not change across the different internal calls)
+	#------------
+	# arguments to be passed at various calls (these are ones that do not change across the 
+	#	different internal calls)
+    #------------
 	clusterPlotArgs<-list(clNames=clNames,add=add,xCoord=xCoord,ylim=ylim,tick=tick,ylab=ylab,xlab=xlab,axisLine=axisLine,box=box)
 	plotTrackArgs<-list(index=index,reuseColors=reuseColors,matchToTop=matchToTop,minRequireColor=minRequireColor,startNewColors=startNewColors,colPalette=colPalette)
 
@@ -381,13 +433,18 @@ setMethod(
 		clusters<-t(clusters) #original code had clusters in rows, rather than columns.
 		if(any(apply(clusters,1,function(x){any(is.na(x))}))) stop("clusters should not have 'NA' values; non-clustered samples should get a '-1' or '-2' value depending on why they are not clustered.")
 		if(any(as.character(clusters)%in%c("-1","-2"))){
-      ###To Do: somehow reuse internal code of .makeColors to do this.
-		  #align them, including "-1","-2" as a cluster. To DO: do this without -1/-2 so not lose a color to them.
+			#------------
+			# if have any -1/-2, have to do ordering without plotting, then fix it up by overwriting the -1/-2 colors
+		    #------------
+			### To Do: somehow reuse internal code of .makeColors to do this.		  	
+			### To DO: do this ordering without -1/-2 so not lose a color to them.
+			
+			#1. align them, including "-1","-2" as a cluster. 
 			out<-do.call(".plotClustersInternal",c(list(clusters=clusters,plot=FALSE),plotTrackArgs,clusterPlotArgs ,list(...)))
 			#take out -1
-			
+
+			#2. replace colors of -1/-2 
 			newColorLeg<-lapply(1:nrow(clusters),function(i){
-			  
 				leg<-out$clusterLegend[[i]]
 				if(any(wh<-leg[,"clusterIds"]== -1))
 				leg[wh,"color"]<-unassignedColor
@@ -401,6 +458,7 @@ setMethod(
 				out$colors[clusters[i,]=="-2",i]<-missingColor
 				return(out$colors[,i])
 			}))
+			#3. call .clusterTrackingPlot to make plot			
 			if(plot) do.call(".clusterTrackingPlot",c(list(colorMat=xColors[out$orderSamples,]),clusterPlotArgs,list(...)))
 			out$colors<-xColors
 			dimnames(out$colors)<-dnames
